--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "cpus": 2
   },
   "waitFor": "onCreateCommand",
-  "updateContentCommand": "pip install -r requirements.txt && python manage.py migrate",
+  "updateContentCommand": "pip install -r requirements.txt && python manage.py migrate && python manage.py collectstatic",
   "postCreateCommand": "",
   "postAttachCommand": {
     "server": "python manage.py runserver"
