--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ share/python-wheels/
 MANIFEST
 
 # Django
-static/
+/static/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
