--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
                 "test"
             ],
             "django": true,
-            "justMyCode": false
+            "justMyCode": true
         }
     ]
 }
