change open-files in dev container to frontend/views.py

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
   "customizations": {
     "codespaces": {
       "openFiles": [
-        "project/settings.py"
+        "frontend/views.py"
       ]
     },
     "vscode": {
