--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-pylint
-Django==4.1.10
-django-browser-reload==1.6.0
+Django>=3
+-r requirements/requirements-testing.txt
+-r requirements/requirements-documentation.txt
