add dev container for dev env

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
   "customizations": {
     "codespaces": {
       "openFiles": [
-        "frontend/views.py"
+        "dynaportal/views.py"
       ]
     },
     "vscode": {
